Added About Page Added the /About Us section The section is Fully responsive

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@keyframes shake {
+  0% { transform: translateX(-50px); } /* Start from left */
+  100% { transform: translateX(50px); } /* End at right */
+}
